test/bad/classes/name03.px

class Class def
    Int x

class Class def
    Int y
